# frame

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SKILL.md  frame-design-v3_3.md  frame-implementation-plan.md  wrangler.jsonc
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
doc/: agent-setup.md  architecture.md  board-view-spec.md  cli.md  concepts.md  format.md  fr-jump-to-id-feature.md  reparent-spec.md  search-design.md  show-context-spec.md  tui.md  undo-navigation.md
doc/archive/: command-palette-feature.md  cross-track-move-spec.md  filtering-spec.md  fr-bulk-ops-feature.md  fr-dep-popup-feature.md  fr-init-feature.md  fr-repeat-action-feature.md  fr-tag-color-editor-feature.md  fr-track-prefix-rename-feature.md  frame-design-v3_3.md  frame-multi-project-spec.md  frame-spec-amendment-done-lifecycle.md  frame-ui-highlight-spec.md  search-design.md  template-project-toml-implementation.md  track-management-spec.md
doc/brand/: frame-brand-guide.md
docs/: index.html
docs/brand/: frame-brand-guide.md
scripts/: check-registry.sh  fr-dev
skills/managing-frame-tasks/: SKILL.md
src/: lib.rs  main.rs
src/cli/: commands.rs  output.rs
src/cli/handlers/: init.rs  mod.rs
src/io/: actors.rs  config_io.rs  git.rs  lock.rs  mod.rs  project_io.rs  recovery.rs  registry.rs  state.rs  watcher.rs
src/model/: config.rs  inbox.rs  mod.rs  project.rs  task.rs  task_id.rs  track.rs
src/ops/: actor_merge.rs  check.rs  clean.rs  import.rs  inbox_ops.rs  mod.rs  search.rs  task_ops.rs  track_ops.rs
src/parse/: inbox_parser.rs  inbox_serializer.rs  mod.rs  span.rs  task_parser.rs  task_serializer.rs  track_parser.rs  track_serializer.rs
src/templates/: project.toml
src/tui/: app.rs  command_actions.rs  mod.rs  theme.rs  undo.rs  wrap.rs
src/tui/input/: command.rs  common.rs  confirm.rs  edit.rs  mod.rs  move_mode.rs  navigate.rs  popups.rs  recent.rs  search.rs  (+3 more)
src/util/: unicode.rs
tests/: cli_integration.rs  merge_simulation.rs  round_trip.rs
tests/fixtures/: all_metadata_track.md  code_in_notes.md  complex_track.md  empty_sections.md  inbox.md  no_metadata_track.md  project.toml  simple_track.md  three_level_nesting.md
(+65 files in other folders)
