[package]
name = "frame"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fr"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
notify = "7"
ratatui = "0.29"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
thiserror = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
